# robonet

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  dist-workspace.toml  release-plz.toml  release.toml
.github/workflows/: publish.yml  release.yml  rust.yml
src/: connectivity.rs  email.rs  logging.rs  main.rs  network_config.rs  networking.rs  service.rs  utils.rs
src/connections/: ap.connection  ap.nmconnection  wpa.connection  wpa.nmconnection  wpa_eap.connection  wpaeap.nmconnection
src/services/: rpi-connectivity-manager.service
src/templates/connections/: ap.nmconnection  wpa.nmconnection
src/templates/dispatchers/: 90-robonet-notify
src/templates/emails/: login_ticket.html
src/templates/services/: robonet-monitor.service  robot-network-manager.service
