[package]
name = "robonet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
nix = "0.26.0"
lettre = { version = "0.10", features = ["smtp-transport", "tokio1", "tokio1-native-tls"] }
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
hostname = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tracing-appender = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }