[package]
name = "robonet"
description = "A tool to manage network connectivity and to facilitate remote access to robots"
version = "0.2.6"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/neurobionics/robonet"
repository = "https://github.com/neurobionics/robonet"
authors = ["Senthur Ayyappan <senthura@umich.edu>"]

[package.metadata.deb]
maintainer = "Senthur Ayyappan <senthura@umich.edu>"
copyright = "2025, Neurobionics Lab <neurobionics@umich.edu>"
license-file = "LICENSE"
depends = ["network-manager"]
section = "utility"
priority = "optional"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
nix = "0.26.0"
lettre = { version = "0.10", features = ["smtp-transport", "tokio1", "tokio1-native-tls"] }
log = "0.4"
chrono = "0.4"
hostname = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tracing-appender = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.5"
lazy_static = "1.4"
metrics = "0.20"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
